test/fails/extra_args.imp
fun one(x)
{
    return x;
}

fun main()
vars tmp
{
    tmp = one(tmp, tmp);
    return tmp;
}
